Fix #1 the home screen

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,51 +7,65 @@
     <link rel="stylesheet" href="../css/home.css" />
     <script src="../js/home.js" defer></script>
   </head>
-  <header>
-    <a href="/"><img src="../img/logo.png" alt="logo" width="25%" /> </a>
-  </header>
   <body>
-    <!-- Poner este botón en medio -->
-    <button name="btn">SOSTENIBILIDAD</button> <br />
-    <h2>AMBIENTE</h2>
-    <br />
-    Desde la deforestación hasta la contaminación, los desafíos ambientales
-    están en aumento, pero también lo están las soluciones. Nuestra cobertura
-    ambiental explora los problemas ambientales del mundo a través de artículos
-    sobre investigaciones pioneras y personas inspiradoras que marcan la
-    diferencia en nuestro planeta.
-    <br />
-    <div class="card">
-      <a href="ene.html">
-        <div class="body-card">
-          <img src="../img/solar.jpg" alt="panel-solar" />
+    <header>
+      <a href="/"><img src="../img/logo.png" alt="logo" /></a>
+    </header>
+
+    <div class="main-content">
+      <button name="btn">SOSTENIBILIDAD</button>
+      
+      <h2>AMBIENTE</h2>
+      
+      <div class="description">
+        Desde la deforestación hasta la contaminación, los desafíos ambientales
+        están en aumento, pero también lo están las soluciones. Nuestra cobertura
+        ambiental explora los problemas ambientales del mundo a través de artículos
+        sobre investigaciones pioneras y personas inspiradoras que marcan la
+        diferencia en nuestro planeta.
+      </div>
+
+      <div class="cards-container">
+        <div class="card">
+          <a href="solar.html">
+            <div class="body-card">
+              <img src="../img/solar.jpg" alt="panel-solar" />
+            </div>
+            <div class="title-card">La transición hacia la energía sostenible</div>
+          </a>
         </div>
-        <div class="title-card">La transición hacia la energía sostenible</div>
-      </a>
-    </div>
-     <div class="card">
-      <a href="detalle.html">
-        <div class="body-card">
-          <img src="../img/solar.jpg" alt="panel-solar" />
+
+        <div class="card">
+          <a href="pollution.html">
+            <div class="body-card">
+              <img src="../img/oceanCleanUp.jpg" alt="contaminación oceánica" />
+            </div>
+            <div class="title-card">La reducción drástica de la contaminación por plásticos</div>
+          </a>
         </div>
-        <div class="title-card">La reducción drástica de la contaminación por plásticos</div>
-      </a>
-    </div>
-     <div class="card">
-      <a href="detalle.html">
-        <div class="body-card">
-          <img src="../img/solar.jpg" alt="panel-solar" />
+
+        <div class="card">
+          <a href="detalle.html">
+            <div class="body-card">
+              <img src="../img/solar.jpg" alt="biodiversidad" />
+            </div>
+            <div class="title-card">Preservación de la Biodiversidad</div>
+          </a>
         </div>
-        <div class="title-card">Preservación de la Biodiversidad</div>
-      </a>
-    </div>
-     <div class="card">
-      <a href="detalle.html">
-        <div class="body-card">
-          <img src="../img/solar.jpg" alt="panel-solar" />
+
+        <div class="card">
+          <a href="detalle.html">
+            <div class="body-card">
+              <img src="../img/solar.jpg" alt="recursos hídricos" />
+            </div>
+            <div class="title-card">Gestión sostenible de los recursos hídricos</div>
+          </a>
         </div>
-        <div class="title-card">Gestión sostenible de los recursos hídricos</div>
-      </a>
+      </div>
     </div>
+
+    <footer>
+      <p>Dafne Ramírez y Samantha Ponce</p>
+    </footer>
   </body>
 </html>
