Fix #3 create environment page

--- a/html/environment.html
+++ b/html/environment.html
@@ -1,1 +1,91 @@
 <!-- Poner explicaciones de lo que es cada punto -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Environment</title>
+    <link rel="stylesheet" href="../css/environment.css" />
+    <script src="../js/enviroment.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <a href="/" class="logo-link">
+          <img src="../img/logo.png" alt="logo" />
+        </a>
+        
+        <nav class="navbar">
+          <div class="dropdown">
+            <button class="dropdown-btn">Menú ☰</button>
+            <div class="dropdown-content">
+              <a href="home.html">🏠 Home</a>
+              <a href="sustainable-energy.html">⚡ Energía Sostenible</a>
+              <a href="pollution-plastics.html">♻️ Contaminación por Plásticos</a>
+              <a href="biodiversity.html">🌿 Biodiversidad</a>
+              <a href="water-resources.html">💧 Recursos Hídricos</a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main class="main-content">
+      <div class="section">
+        <img src="../img/enegia-renovable.jpg" alt="Energía renovable">
+        <div class="content">
+          <h2>La transición hacia la energía sostenible</h2>
+          <p>
+            Proceso de cambio profundo en la producción, distribución y consumo de
+            energía para abandonar los combustibles fósiles y adoptar un sistema basado
+            en fuentes renovables como la solar, eólica e hidroeléctrica, con el
+            objetivo de combatir el cambio climático, reducir las emisiones de gases de
+            efecto invernadero y garantizar el bienestar de futuras generaciones.
+          </p>
+        </div>
+      </div>
+      <div class="section section-reverse">
+        <img src="../img/plasticos.jpg" alt="Contaminación por plásticos">
+        <div class="content">
+          <h2>La reducción drástica de la contaminación por plásticos</h2>
+          <p>
+            Disminuir en gran medida la cantidad de residuos plásticos que acaban en el
+            medio ambiente mediante la implementación de estrategias como la
+            reutilización, el reciclaje efectivo y el uso de materiales alternativos.
+            Implica también una modificación en los hábitos de consumo, evitando los
+            plásticos de un solo uso y los envases excesivos, para así lograr un modelo
+            más sostenible y limpio.
+          </p>
+        </div>
+      </div>
+      <div class="section">
+        <img src="../img/biodiversidad.jpg" alt="Biodiversidad">
+        <div class="content">
+          <h2>Preservación de la Biodiversidad</h2>
+          <p>
+            Conjunto de acciones humanas que buscan proteger la variedad de vida en la
+            Tierra —genes, especies, ecosistemas y paisajes— para asegurar su existencia
+            a largo plazo y el uso sostenible de los recursos que la biodiversidad nos
+            ofrece. Esto implica tanto la conservación de la naturaleza y sus hábitats
+            como la mitigación de factores humanos que causan su deterioro, como la
+            contaminación, la deforestación y la explotación excesiva de recursos.
+          </p>
+        </div>
+      </div>
+      <div class="section section-reverse">
+        <img src="../img/gestion-sostenible-del-agua-1024x640.jpg.webp" alt="Gestión sostenible del agua">
+        <div class="content">
+          <h2>Gestión sostenible de los recursos hídricos</h2>
+          <p>
+            Gestión y aprovechamiento coordinado del agua, la tierra y recursos
+            relacionados para satisfacer las necesidades actuales sin comprometer la
+            capacidad de futuras generaciones para satisfacer las suyas, priorizando la
+            equidad social, el bienestar económico y la preservación de los ecosistemas.
+            Implica reducir la contaminación, aumentar la eficiencia y la reutilización
+            del agua, y adaptarse al cambio climático para asegurar un suministro
+            adecuado y de calidad.
+          </p>
+        </div>
+      </div>
+    </main>
+  </body>
+</html>
