--- a/html/home.html
+++ b/html/home.html
@@ -13,10 +13,9 @@
     </header>
 
     <div class="main-content">
-      <button name="btn">SOSTENIBILIDAD</button>
-      
-      <h2>AMBIENTE</h2>
-      
+      <a href="environment.html">
+      <button name="btn">MEDIO AMBIENTE</button>
+      </a>
       <div class="description">
         Desde la deforestación hasta la contaminación, los desafíos ambientales
         están en aumento, pero también lo están las soluciones. Nuestra cobertura
@@ -27,7 +26,7 @@
 
       <div class="cards-container">
         <div class="card">
-          <a href="solar.html">
+          <a href="sustainable-energy.html">
             <div class="body-card">
               <img src="../img/solar.jpg" alt="panel-solar" />
             </div>
@@ -36,7 +35,7 @@
         </div>
 
         <div class="card">
-          <a href="pollution.html">
+          <a href="pollution-plastics.html">
             <div class="body-card">
               <img src="../img/oceanCleanUp.jpg" alt="contaminación oceánica" />
             </div>
@@ -45,7 +44,7 @@
         </div>
 
         <div class="card">
-          <a href="detalle.html">
+          <a href="biodiversity.html">
             <div class="body-card">
               <img src="../img/solar.jpg" alt="biodiversidad" />
             </div>
@@ -54,7 +53,7 @@
         </div>
 
         <div class="card">
-          <a href="detalle.html">
+          <a href="water-resources.html">
             <div class="body-card">
               <img src="../img/solar.jpg" alt="recursos hídricos" />
             </div>
@@ -65,7 +64,7 @@
     </div>
 
     <footer>
-      <p>Dafne Ramírez y Samantha Ponce</p>
+      <p>Dafne Ramirez y Samantha Ponce</p>
     </footer>
   </body>
 </html>
