fix #6 biodiversity page

--- a/html/biodiversity.html
+++ b/html/biodiversity.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Preservación de la Biodiversidad</title>
+  <link rel="stylesheet" href="../css/biodiversity.css" />
+</head>
+<body>
+  <header>
+    <h1>Preservación de la Biodiversidad</h1>
+    <img src="../img/biodiversidad1.png" alt="Preservación de la biodiversidad">
+  </header>
 
+
+  <section>
+    <div class="parte1">
+      <h3><strong>¿Qué es la biodiversidad?</strong></h3>
+      <p>
+        La variedad genética dentro de las especies (diferencias entre individuos).<br>
+        La variedad entre especies (animales, plantas, hongos, microbios).<br>
+        La variedad de ecosistemas (bosques, humedales, arrecifes, desiertos, etc.).
+      </p>
+      <p>
+        Tener muchos tipos de especies y ecosistemas sanos es esencial: para la seguridad alimentaria,
+        para materiales medicinales, para regular el clima, purificar el agua, y para nuestro bienestar general.
+      </p>
+    </div>
+
+
+    <div class="parte2">
+      <h3><strong>Datos y cifras</strong></h3>
+      <p>
+        Más del 75 % de los cultivos alimentarios del mundo dependen de los polinizadores, que aportan anualmente entre
+        235 000 y 577 000 millones de dólares de los Estados Unidos a la producción agrícola mundial.<br>
+        Más del 50 % de los medicamentos modernos proceden de fuentes naturales. Por ejemplo, algunos antibióticos se
+        obtienen de hongos y hay analgésicos que se elaboran a partir de sustancias vegetales.<br>
+        Los bosques albergan el 80 % de la biodiversidad terrestre, absorben aproximadamente 2600 millones de toneladas
+        de dióxido de carbono al año y contribuyen a paliar el cambio climático.<br>
+        Las especies exóticas invasoras provocan el 60 % de las extinciones de especies y causan daños económicos en
+        todo el mundo por un valor anual de 423 000 millones de dólares de los Estados Unidos.<br>
+        Los ecosistemas sanos proporcionan el 75 % del agua dulce, y los humedales son fundamentales para purificar el
+        agua. Sin embargo, desde 1970 han desaparecido el 35 % de los humedales.<br>
+        Los Pueblos Indígenas, que constituyen aproximadamente el 6 % de la población mundial, son partes interesadas
+        importantes y sujetos de derechos en la conservación y gestión sostenible de la biodiversidad. Estos pueblos
+        ocupan más de 38 millones de kilómetros cuadrados de suelo en todo el mundo, donde se encuentra casi el 40 %
+        de todas las áreas protegidas.
+      </p>
+    </div>
+
+
+    <div class="parte3">
+      <h3><strong>¿Qué amenaza muestra en nuestra sociedad?</strong></h3>
+      <img src="../img/pulmones.avif" alt="pulmones saludables y dañados">
+      <p>
+        La degradación de los ecosistemas y la pérdida de biodiversidad se están convirtiendo en problemas de salud
+        importantes. Cuando se alteran los ecosistemas, pueden verse afectados recursos como la calidad del aire, el
+        agua y los alimentos. Además, perdemos recursos naturales valiosos, como especies animales y vegetales, que
+        podrían aportar beneficios para la salud y la medicina que todavía desconocemos.
+      </p>
+    </div>
+
+
+    <div class="parte4">
+      <h3><strong>Soluciones y medidas para proteger la biodiversidad</strong></h3>
+      <p>
+        <strong>Áreas protegidas:</strong> proteger hábitats clave, reservas naturales, parques nacionales, zonas marinas.<br>
+        <strong>OMEC:</strong> conservación fuera de zonas estrictamente protegidas, como áreas gestionadas por comunidades locales o acuerdos privados.<br>
+        <strong>Restauración ecológica:</strong> reforestación, recuperación de humedales, reconexión de hábitats fragmentados.<br>
+        <strong>Agricultura y pesca sostenibles:</strong> métodos menos intensivos, agroecología, reducción de pesticidas, rotación de cultivos, pesca responsable.<br>
+        <strong>Control de especies invasoras:</strong> prevención de introducción, control o erradicación.<br>
+        <strong>Reducción de la contaminación:</strong> tratamiento de aguas, control de residuos, reducción de plásticos y emisiones.<br>
+        <strong>Políticas y leyes:</strong> normativas nacionales e internacionales, incentivos económicos, cumplimiento legal y participación ciudadana.<br>
+        <strong>Sensibilización y educación:</strong> informar a la sociedad, fomentar hábitos sostenibles y valorar la naturaleza.
+      </p>
+    </div>
+  </section>
+
+
+  <footer>
+    <h2>Webgrafía</h2>
+    <p>
+      <a href="https://www.who.int/news-room/fact-sheets/detail/biodiversity" target="_blank">
+        Organización Mundial de la Salud (OMS)
+      </a><br>
+      <a href="https://unstats.un.org/sdgs/report/2024/Goal-15" target="_blank">
+        Naciones Unidas - Objetivo 15
+      </a>
+    </p>
+  </footer>
+</body>
+</html>
