Fix #5 create sustainable energy page

--- a/html/environment.html
+++ b/html/environment.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Environment</title>
     <link rel="stylesheet" href="../css/environment.css" />
-    <script src="../js/enviroment.js" defer></script>
+    <script src="../js/dropdown-menu.js" defer></script>
   </head>
-  <body>
-    <header>
+  <header>
       <div class="header-container">
         <a href="/" class="logo-link">
           <img src="../img/logo.png" alt="logo" />
         </a>
-        
         <nav class="navbar">
           <div class="dropdown">
-            <button class="dropdown-btn">Menú ☰</button>
+            <button class="dropdown-btn">☰</button>
             <div class="dropdown-content">
               <a href="home.html">🏠 Home</a>
               <a href="sustainable-energy.html">⚡ Energía Sostenible</a>
@@ -29,6 +27,7 @@
         </nav>
       </div>
     </header>
+  <body>
     <main class="main-content">
       <div class="section">
         <img src="../img/enegia-renovable.jpg" alt="Energía renovable">
