Fix #13 create ocean cleanup page

--- a/html/sustainable-energy.html
+++ b/html/sustainable-energy.html
@@ -137,6 +137,7 @@
           </a>
         </div>
         <div style="text-align: right; min-width: 200px">
+          <h3>Autoras</h3>
           <p style="margin: 5px 0">Dafne Ramírez</p>
           <p style="margin: 5px 0">Samantha Ponce</p>
         </div>
