--- a/html/biodiversity.html
+++ b/html/biodiversity.html
@@ -32,8 +32,8 @@
         <h1>Preservación de la Biodiversidad</h1>
         <img
           src="../img/biodiversidad1.png"
-          alt="Preservación de la biodiversidad"
-        />
+          alt="Preservación de la biodiversidad" />
+          <p> ONG Preservación del amazonas</p>
       </section>
 
       <article class="content-section">
@@ -133,6 +133,7 @@
         "
       >
         <div style="flex: 1; min-width: 250px">
+          <h3>Webgrafía</h3>
           <a
             href="https://www.who.int/news-room/fact-sheets/detail/biodiversity"
             target="_blank"
@@ -148,7 +149,9 @@
             Naciones Unidas - Objetivo 15
           </a>
         </div>
+        
         <div style="text-align: right; min-width: 200px">
+          <h3>Autores</h3>
           <p style="margin: 5px 0">Dafne Ramírez</p>
           <p style="margin: 5px 0">Samantha Ponce</p>
         </div>
