--- a/html/home.html
+++ b/html/home.html
@@ -46,7 +46,7 @@
         <div class="card">
           <a href="biodiversity.html">
             <div class="body-card">
-              <img src="../img/solar.jpg" alt="biodiversidad" />
+              <img src="../img/biodiversidad1.png" alt="biodiversidad" />
             </div>
             <div class="title-card">Preservación de la Biodiversidad</div>
           </a>
@@ -55,7 +55,7 @@
         <div class="card">
           <a href="water-resources.html">
             <div class="body-card">
-              <img src="../img/solar.jpg" alt="recursos hídricos" />
+              <img src="../img/hidrico.jpeg" alt="recursos hídricos" />
             </div>
             <div class="title-card">Gestión sostenible de los recursos hídricos</div>
           </a>
