Fix #19 improve the footer

--- a/html/biodiversity.html
+++ b/html/biodiversity.html
@@ -151,8 +151,8 @@
         </div>
         
         <div style="text-align: right; min-width: 200px">
-          <h3>Autores</h3>
-          <p style="margin: 5px 0">Dafne Ramírez</p>
+          <h3>Autoras</h3>
+          <p style="margin: 5px 0">Dafne Ramirez</p>
           <p style="margin: 5px 0">Samantha Ponce</p>
         </div>
       </div>
