--- a/html/water-resources.html
+++ b/html/water-resources.html
@@ -20,7 +20,7 @@
             <a href="home.html">🏠 Home</a>
             <a href="pollution-plastics.html">♻️ Contaminación por Plásticos</a>
             <a href="biodiversity.html">🌿 Biodiversidad</a>
-            <a href="water-resources.html">💧 Recursos Hídricos</a>
+            <a href="sustainable-energy.html">⚡ Energía Sostenible</a>
           </div>
         </div>
       </nav>
@@ -32,20 +32,23 @@
       <section class="hero-section">
         <img src="../img/hidrico.jpeg" alt="Gestión sostenible del agua" />
         <p class="image-description">
-          Gestión sostenible de los recursos hídricos: preservación y uso eficiente del agua.
+          Gestión sostenible de los recursos hídricos: preservación y uso
+          eficiente del agua.
         </p>
       </section>
 
       <article class="content-section">
         <h2>¿Qué significa la gestión sostenible del agua?</h2>
         <p class="exemple">
-          La gestión sostenible del agua busca garantizar que este recurso esencial esté disponible 
-          en cantidad y calidad suficientes para satisfacer las necesidades humanas, agrícolas, industriales 
-          y ambientales, sin poner en riesgo su disponibilidad futura.
+          La gestión sostenible del agua busca garantizar que este recurso
+          esencial esté disponible en cantidad y calidad suficientes para
+          satisfacer las necesidades humanas, agrícolas, industriales y
+          ambientales, sin poner en riesgo su disponibilidad futura.
         </p>
         <p class="exemple">
-          Involucra proteger las fuentes naturales, reducir el desperdicio, mejorar la eficiencia del uso 
-          y promover la reutilización, asegurando la conservación de los ecosistemas acuáticos.
+          Involucra proteger las fuentes naturales, reducir el desperdicio,
+          mejorar la eficiencia del uso y promover la reutilización, asegurando
+          la conservación de los ecosistemas acuáticos.
         </p>
       </article>
 
@@ -53,11 +56,16 @@
         <h2>Datos y cifras</h2>
         <div class="data-section">
           <p>
-            Solo el 3 % del agua del planeta es dulce, y menos del 1 % está disponible para consumo humano.<br>
-            Más de 2.000 millones de personas viven en países con escasez de agua.<br>
-            La agricultura consume el 70 % del agua dulce disponible a nivel mundial.<br>
-            El 80 % de las aguas residuales se vierten sin tratamiento en el medio ambiente.<br>
-            Las sequías y la contaminación afectan cada vez más la disponibilidad de agua potable.
+            Solo el 3 % del agua del planeta es dulce, y menos del 1 % está
+            disponible para consumo humano.<br />
+            Más de 2.000 millones de personas viven en países con escasez de
+            agua.<br />
+            La agricultura consume el 70 % del agua dulce disponible a nivel
+            mundial.<br />
+            El 80 % de las aguas residuales se vierten sin tratamiento en el
+            medio ambiente.<br />
+            Las sequías y la contaminación afectan cada vez más la
+            disponibilidad de agua potable.
           </p>
         </div>
       </article>
@@ -67,9 +75,11 @@
         <div class="data-section">
           <img src="../img/sequia.jpg" alt="Escasez de agua" />
           <p>
-            El cambio climático, la contaminación industrial, la sobreexplotación de ríos y acuíferos, 
-            y el uso ineficiente del agua amenazan la seguridad hídrica.  
-            En muchos lugares, las reservas subterráneas se están agotando más rápido de lo que pueden reponerse.
+            El cambio climático, la contaminación industrial, la
+            sobreexplotación de ríos y acuíferos, y el uso ineficiente del agua
+            amenazan la seguridad hídrica. En muchos lugares, las reservas
+            subterráneas se están agotando más rápido de lo que pueden
+            reponerse.
           </p>
         </div>
       </article>
@@ -77,17 +87,34 @@
       <article class="content-section">
         <h2>Medidas y soluciones sostenibles</h2>
         <ul class="objectives-list">
-          <li><strong>Uso responsable:</strong> reducir el consumo y evitar fugas domésticas o industriales.</li>
-          <li><strong>Reutilización del agua:</strong> tratamiento y reciclaje de aguas residuales para riego o limpieza.</li>
-          <li><strong>Protección de ecosistemas:</strong> conservar ríos, lagos y humedales.</li>
-          <li><strong>Educación y sensibilización:</strong> campañas para promover el ahorro de agua.</li>
-          <li><strong>Políticas sostenibles:</strong> leyes y planes de gestión integrados a largo plazo.</li>
-          <li><strong>Tecnologías eficientes:</strong> riego por goteo, sensores y sistemas de captación de lluvia.</li>
+          <li>
+            <strong>Uso responsable:</strong> reducir el consumo y evitar fugas
+            domésticas o industriales.
+          </li>
+          <li>
+            <strong>Reutilización del agua:</strong> tratamiento y reciclaje de
+            aguas residuales para riego o limpieza.
+          </li>
+          <li>
+            <strong>Protección de ecosistemas:</strong> conservar ríos, lagos y
+            humedales.
+          </li>
+          <li>
+            <strong>Educación y sensibilización:</strong> campañas para promover
+            el ahorro de agua.
+          </li>
+          <li>
+            <strong>Políticas sostenibles:</strong> leyes y planes de gestión
+            integrados a largo plazo.
+          </li>
+          <li>
+            <strong>Tecnologías eficientes:</strong> riego por goteo, sensores y
+            sistemas de captación de lluvia.
+          </li>
         </ul>
       </article>
     </main>
   </body>
-
 
   <footer>
     <div class="footer-content">
@@ -107,7 +134,7 @@
             target="_blank"
             rel="noopener"
           >
-            Gestion de agua 
+            Gestion de agua
           </a>
           <a
             href="https://www.xuletas.es/ficha/gestion-sostenible-agua-espana-recursos-desafios-soluciones/?utm_source=chatgpt.com#google_vignette"
@@ -117,10 +144,10 @@
             Recursos-desafio-soluciones
           </a>
         </div>
-        
+
         <div style="text-align: right; min-width: 200px">
-          <h3>Autores</h3>
-          <p style="margin: 5px 0">Dafne Ramírez</p>
+          <h3>Autoras</h3>
+          <p style="margin: 5px 0">Dafne Ramirez</p>
           <p style="margin: 5px 0">Samantha Ponce</p>
         </div>
       </div>
