--- a/html/pollution-plastics.html
+++ b/html/pollution-plastics.html
@@ -140,7 +140,7 @@
         </div>
         <div style="text-align: right; min-width: 200px">
           <h3>Autoras</h3>
-          <p style="margin: 5px 0">Dafne Ramírez</p>
+          <p style="margin: 5px 0">Dafne Ramirez</p>
           <p style="margin: 5px 0">Samantha Ponce</p>
         </div>
       </div>
