Fix #1 modify pages

--- a/html/home.html
+++ b/html/home.html
@@ -8,63 +8,47 @@
     <script src="../js/home.js" defer></script>
   </head>
   <body>
-    <header>
-      <a href="/"><img src="../img/logo.png" alt="logo" /></a>
-    </header>
-
     <div class="main-content">
-      <a href="environment.html">
-      <button name="btn">MEDIO AMBIENTE</button>
+      <a href="social.html">
+        <button name="btn">RETOS SOCIALES</button>
       </a>
       <div class="description">
-        Desde la deforestación hasta la contaminación, los desafíos ambientales
-        están en aumento, pero también lo están las soluciones. Nuestra cobertura
-        ambiental explora los problemas ambientales del mundo a través de artículos
-        sobre investigaciones pioneras y personas inspiradoras que marcan la
-        diferencia en nuestro planeta.
+        Problemas complejos que afectan a una sociedad en su conjunto, como la
+        pobreza, la desigualdad, la discriminación, la migración y el cambio
+        climático, y que requieren soluciones sistémicas e institucionales.
       </div>
 
       <div class="cards-container">
         <div class="card">
-          <a href="sustainable-energy.html">
+          <a href="africa.html">
             <div class="body-card">
-              <img src="../img/solar.jpg" alt="panel-solar" />
+              <img src="../img/escuela-en-africa.jpg" alt="panel-solar" />
             </div>
-            <div class="title-card">La transición hacia la energía sostenible</div>
+            <div class="title-card">Acceso a la Educación en África</div>
           </a>
         </div>
 
         <div class="card">
-          <a href="pollution-plastics.html">
+          <a href="poverty.html">
             <div class="body-card">
-              <img src="../img/oceanCleanUp.jpg" alt="contaminación oceánica" />
+              <img src="../img/poverty.jpg" alt="contaminación oceánica" />
             </div>
-            <div class="title-card">La reducción drástica de la contaminación por plásticos</div>
+            <div class="title-card">Pobreza</div>
           </a>
         </div>
 
-        <div class="card">
-          <a href="biodiversity.html">
+        <div class="card card-centered">
+          <a href="discrimination.html">
             <div class="body-card">
-              <img src="../img/biodiversidad1.png" alt="biodiversidad" />
+              <img src="../img/discrimination.jpeg" alt="biodiversidad" />
             </div>
-            <div class="title-card">Preservación de la Biodiversidad</div>
-          </a>
-        </div>
-
-        <div class="card">
-          <a href="water-resources.html">
-            <div class="body-card">
-              <img src="../img/hidrico.jpeg" alt="recursos hídricos" />
-            </div>
-            <div class="title-card">Gestión sostenible de los recursos hídricos</div>
+            <div class="title-card">Discriminación</div>
           </a>
         </div>
       </div>
     </div>
-
     <footer>
-      <p>Dafne Ramirez y Samantha Ponce</p>
+      <p>Dafne, Ferran y Adri</p>
     </footer>
   </body>
 </html>
